# AnnaResearch

./: .gitignore  AGENTS.md  CONTEXT.md  README.md
.github/workflows/: build-researcher-binary.yml
.scratch/guided-sectioned-research-workflow/: PRD.md
.scratch/guided-sectioned-research-workflow/issues/: 01-sectioned-research-job-persistence.md  02-role-candidate-selection.md  03-research-focus-brainstorming.md  04-outline-section-planning.md  05-allowed-research-source-whitelist.md  06-single-section-iterative-research-loop.md  07-serial-section-execution-progress.md  08-per-section-lexical-context-selector.md  09-section-writer-output-fallback.md  10-report-framing-final-assembly.md  11-bundle-contract-guided-workflow.md
.scratch/guided-step-pages-ui-refresh/: PRD.md
.scratch/guided-step-pages-ui-refresh/issues/: 01-guided-research-step-pages-shell.md  02-research-role-editable-draft-review-cards.md  (+5 more)
.scratch/product-research-roadmap/: PRD.md
.scratch/researcher-tool-frontend-orchestration/: PRD.md
anna-researcher-app/: app.json  manifest.json  package-lock.json
anna-researcher-app/bundle/: index.html
anna-researcher-app/src/: App.tsx  styles.css  types.ts
anna-researcher-app/tests/: conftest.py  run_tests.py
docs/adr/: 0001-frontend-owned-researcher-tool-backend.md  0002-temporary-local-result-transfer-server.md  0003-unified-research-source-abstraction.md  0005-iterative-research-loop-frontend-owned.md  0006-guided-sectioned-research-workflow.md
docs/anna/: tool-calls-llm-agent-latest.md
gpt-researcher/: .gitignore  AGENTS.md
researcher-tool/: executa.json  package_binary.sh  pyproject.toml  researcher_plugin.py
researcher-tool/researcher_tool/: __init__.py  context_selector.py  dispatcher.py  domains.py  errors.py  job_store.py  result_transfer.py  settings.py  tavily_retrieval.py  views.py
researcher-tool/researcher_tool/embedding/: __init__.py  anna_embed.py  chunking.py  selector.py  similarity.py
researcher-tool/researcher_tool/sources/: __init__.py  registry.py
researcher-tool/researcher_tool/sources/extraction/: __init__.py  arxiv.py  browser_fallback.py  fetcher.py  html.py  models.py  pdf.py  utils.py
researcher-tool/researcher_tool/sources/native/: __init__.py  duckduckgo.py  executor.py
test-app/: app.json  manifest.json
test-app/bundle/: app.js  index.html  style.css
test-app/executas/llm-test-python/: executa.json  llm_test_plugin.py  pyproject.toml
(+46 files in other folders)
