[project]
name = "tool-xhz-researcher-python-9ksd5wzq"
version = "0.2.0"
description = "Anna Researcher standalone Executa tool backend"
requires-python = ">=3.10"
authors = [{ name = "Anna Research" }]
dependencies = [
    "arxiv>=2.0.0",
    "beautifulsoup4>=4.12.2",
    "ddgs>=9.0.0",
    "lxml>=4.9.2",
    "pymupdf>=1.23.6",
    "crawl4ai>=0.9.0",
]

[project.scripts]
"tool-xhz-researcher-python-9ksd5wzq" = "researcher_plugin:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["researcher_plugin"]
packages = ["researcher_tool"]
