[project]
name = "tool-test-llm-sampling-12345678"
version = "0.1.0"
description = "Minimal Anna LLM sampling test Executa"
requires-python = ">=3.11"

[project.scripts]
tool-test-llm-sampling-12345678 = "llm_test_plugin:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["llm_test_plugin"]
